<resources>
    <string name="app_name">Thousandaire</string>

    <string name="default_text">default</string>

    <string name="question_mickey">What is the name of Mickey Mouse\'s dog?</string>
    <string name="answer_mickey_pluto">Pluto</string>
    <string name="answer_mickey_goofy">Goofy</string>
    <string name="answer_mickey_minnie">Minnie</string>
    <string name="answer_mickey_daisy">Daisy</string>
    <string name="point_mickey_amount">100</string>

    <string name="question_planet">What is the largest planet in our solar system?</string>
    <string name="answer_planet_earth">Earth</string>
    <string name="answer_planet_mars">Mars</string>
    <string name="answer_planet_jupiter">Jupiter</string>
    <string name="answer_planet_venus">Venus</string>
    <string name="point_planet_amount">200</string>

    <string name="question_gilligan">How many people were originally shipwrecked on Gilligan\'s Island?</string>
    <string name="answer_gilligan_2">2</string>
    <string name="answer_gilligan_6">6</string>
    <string name="answer_gilligan_7">7</string>
    <string name="answer_gilligan_8">8</string>
    <string name="point_gilligan_amount">300</string>

    <string name="question_periodic">Which of these is not an abbreviation for an element on the periodic table?</string>
    <string name="answer_periodic_Tc">Tc</string>
    <string name="answer_periodic_O">O</string>
    <string name="answer_periodic_Fe">Fe</string>
    <string name="answer_periodic_E">E</string>
    <string name="point_periodic_amount">400</string>

    <string name="question_valletta">The city Valletta is the capital of which European country?</string>
    <string name="answer_valletta_croatia">Croatia</string>
    <string name="answer_valletta_latvia">Latvia</string>
    <string name="answer_valletta_estonia">Estonia</string>
    <string name="answer_valletta_malta">Malta</string>
    <string name="point_valletta_amount">500</string>

    <string name="question_miles">Approximately how many million miles is the Earth from the Sun?</string>
    <string name="answer_miles_1">1</string>
    <string name="answer_miles_10">10</string>
    <string name="answer_miles_100">100</string>
    <string name="answer_miles_200">200</string>
    <string name="point_miles_amount">1000</string>

    <string name="go_on_button">GO ON</string>
    <string name="quit_button">QUIT</string>
    <string name="quit_game_button">QUIT GAME</string>
    <string name="play_over_button">PLAY OVER</string>

    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>

    <string name="game_over_text">I\'m sorry! That is not the correct answer!</string>

    <string name="you_won_score">1001</string>

</resources>
