<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/color_background_activity_score"
    tools:ignore="Overdraw">

    <TextView
        android:id="@+id/score_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:gravity="center"
        tools:text="@string/default_text"
        android:textColor="@color/color_text"
        android:textSize="20sp" />

    <Button
        android:id="@+id/play_over_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_over_button" />

    <Button
        android:id="@+id/quit_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quit_game_button" />

</LinearLayout>