<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android= "http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/color_background_activity_proceed">

    <TextView
        android:id="@+id/proceed_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:gravity="center"
        tools:text="@string/default_text"
        android:textColor="@color/color_text"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/go_on_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_on_button"/>

        <Button
            android:id="@+id/quit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/quit_button"/>

    </LinearLayout>

</LinearLayout>